[workspace]
members = [
    "imgui-memory-editor-sys",
]

[package]
name = "imgui-memory-editor"
version = "0.1.0"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
description = "Safe Rust bindings to Dear ImGui memory editor widget."
license = "MIT"
readme = "README.md"
repository = "https://github.com/NightShade256/rust-imgui-memory-editor"

[dependencies]
cty = "0.2"
imgui = "0.6"
imgui-memory-editor-sys = { path = "./imgui-memory-editor-sys" }
