[package]
name = "imgui-memory-editor-sys"
version = "0.3.0"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
description = "Raw no_std bindings to Dear ImGui memory editor widget."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/NightShade256/rust-imgui-memory-editor"
build = "build.rs"
links = "imgui_memory_editor"

[build-dependencies]
cc = "1.0"

[dependencies]
chlorine = "1.0"
